Add search for TipsAndTricks and add style for Add/Delete TipsAndTricks's buttons on admin page

--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -21,6 +21,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/tipsandtricks/buttonsAJAX.js}"></script>
 </head>
@@ -37,11 +41,21 @@
                             <h2>Manage <b>Tips&tricks</b></h2>
                         </div>
                         <div class="col-sm-6">
-                            <a href="#addTipsAndTricksModal" id="addTipsAndTricksModalBtn" class="btn btn-success"
-                               data-toggle="modal"><i class="material-icons">&#xE147;</i>
-                                <span>Add New Tips&Tricks</span></a>
-                            <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i
-                                    class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                            <span class="search-box-right">
+                                    <form class="form-inline searching" action="/management/tipsandtricks" method="get">
+                                        <img alt="search" id="btnSearchImage"
+                                             src="/img/search.png">
+                                        <input type="text" name="query" id="inputSearch" class="form-control"
+                                               placeholder="Search…">
+                                    </form>
+                                </span>
+                            <a href="#addTipsAndTricksModal" id="addTipsAndTricksModalBtn" class="btn btn-secondary"
+                               data-toggle="modal">
+                                <div>Add New Tips&Tricks</div>
+                            </a>
+                            <a href="#deleteAllSelectedModal" id="btnDelete" class="btn btn-remove disabled" data-toggle="modal">
+                                <div>Delete</div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +124,8 @@
                             <td>
                                     <span class="custom-checkbox">
                                         <input type="checkbox" th:id="checkbox+${iterStatus.count}" id="checkbox1"
-                                               name="options[]" th:value="${tipsAndTricks.getId()}">
+                                               name="options[]" th:value="${tipsAndTricks.getId()}"
+                                               th:onclick="'updateCheckBoxCount('+${iterStatus.count}+')'">
                                         <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
                                     </span>
                             </td>
