--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -68,7 +68,7 @@ table.table tr th:last-child {
     width: 100px;
 }
 table.table-striped tbody tr:nth-of-type(odd) {
-    background-color: #fcfcfc;
+    background-color: #f2f5f7;
 }
 table.table-striped.table-hover tbody tr:hover {
     background: #f5f5f5;
@@ -292,12 +292,13 @@ table.table .avatar {
     left: 10px;
 }
 input[type=search] {
-    border: 1px dotted #999;
-    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid #b5b7b8;
+    border-radius: 0px;
+    /*background-image: url('/img/search.png');*/
+    background-repeat: no-repeat;
+    background-color: #f2f5f7;
     width : 110px;
-    margin: 0;
-    box-sizing: border-box;
-    -webkit-appearance: none;
 }
 
 .search-box-right img{
@@ -435,4 +436,53 @@ button#searchBy img{
 }
 .col.action {
     width: 90px;
+}
+
+/* sidepanel*/
+.eco-news-active-link{
+    background-color: #a2b5af;
+    font-weight: bold;
+}
+li {
+    list-style-type: none;
+}
+.sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    background-color: #839d94;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.sidepanel a:hover {
+    color: #f1f1f1;
+}
+.sidepanel a{
+    font-size: 12px;
+    padding-left: 15%;
+}
+.sidepanel .closebtn {
+    position: absolute;
+    color: black;
+    top: 0;
+    right: 25px;
+    font-size: 30px;
+}
+.openbtn {
+    position: fixed;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #839d94;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+}
+.openbtn:hover {
+    background-color:#444;
+}
+.list-item{
+    margin-top: 5%;
+    width: 100%;
 }
