--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -33,7 +33,7 @@
 <div id="header" th:insert="core/header"></div>
 <div class="main-content">
     <div class="container-xl">
-        <div class="row">
+        <div class="row" id ="eco-news-content">
             <!--            SIDEBAR-->
             <div>
                 <div id="sidebar" th:insert="core/sidebar"></div>
