--- a/core/src/main/resources/templates/core/sidebar.html
+++ b/core/src/main/resources/templates/core/sidebar.html
@@ -3,7 +3,7 @@
 <div id="mySidepanel" class="sidepanel">
     <div>
         <ul class="nav">
-            <li  class="nav-item" style="margin-top: 5%">
+            <li  class="nav-item" style="margin-top: 5% ">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
                     <i class="fas fa-chevron-left"></i>
                 </a>
@@ -12,67 +12,67 @@
                 <img  style="width: 50px;height: 50px; border-radius: 100px; margin-left: 20%" th:src="@{/img/user_icon.png}">
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white " th:href="@{/management/advices}">
+                <a class="nav-link" style="color: white; font-size: 12px; " th:href="@{/management/advices}">
                     Advices
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/achievement}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/achievement}">
                     Achievement
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a id="eco-news-nav" class="nav-link" style="color: white" th:href="@{/management/eco-news}">
+                <a id="eco-news-nav" class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/eco-news}">
                     Eco news
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/tipsandtricks}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/tipsandtricks}">
                     Tips & Tricks
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/factoftheday}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/factoftheday}">
                     Fact of the day
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/users}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/users}">
                     Users
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/habits/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/habits/}">
                     Habits
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/facts}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/facts}">
                     Habit Facts
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/rating/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/rating/}">
                     Rating
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/places/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/places/}">
                     Places
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/tags/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/tags/}">
                     Tags
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/socialnetworkimages/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/socialnetworkimages/}">
                     Social network images
                 </a>
             </li>
             <li class="list-item nav-item">
-                <a class="nav-link" style="color: white" th:href="@{/management/goals/}">
+                <a class="nav-link" style="color: white;font-size: 12px; " th:href="@{/management/goals/}">
                     Goals
                 </a>
             </li>
