--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -3,22 +3,23 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
-.table{
+
+.table {
     font-size: 14px;
+    margin-top: 20px;
 }
-.table-responsive {
-    margin: 30px 0;
-}
-.table-secondary, .table-secondary>td, .table-secondary>th{
+.table-secondary, .table-secondary > td, .table-secondary > th {
     background-color: #F5F6F6;
 }
+
 .table-wrapper {
     background: #fff;
-    padding: 20px 25px;
+    margin-top: 5px;
     border-radius: 3px;
     min-width: 1000px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
+
 .table-title {
     padding-bottom: 15px;
     color: #212529;
@@ -27,15 +28,30 @@ body {
     margin: -20px -25px 10px;
     border-radius: 3px 3px 0 0;
 }
+
 .table-title h2 {
     display: inline-block;
     font-weight: 500;
-    margin: 5px 0 0;
     font-size: 32px;
+    color: #13AA57;
 }
+.manager-user {
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #b4b4b4;
+    border-top: 1px solid #b4b4b4;
+}
+
+.buttons {
+    margin-left: 740px;
+}
+
+
 .table-title .btn-group {
     float: right;
 }
+
 .table-title .btn {
     color: #fff;
     float: right;
@@ -45,44 +61,65 @@ body {
     border-radius: 2px;
     border: none;
     outline: none !important;
-    margin-left: 10px;
+    margin-left: 20px;
 }
+
 .table-title .btn i {
     float: left;
     font-size: 21px;
     margin-right: 5px;
 }
+
 .table-title .btn span {
     float: left;
     margin-top: 2px;
 }
+
 table.table tr th, table.table tr td {
     border-color: #e9e9e9;
     padding: 12px 15px;
     vertical-align: middle;
+
+}
+
+table.table tr th {
+    background-color: #a4b4ab
+
 }
 table.table tr th:first-child {
     width: 60px;
+
 }
+
 table.table tr th:last-child {
     width: 100px;
+
 }
 table.table-striped tbody tr:nth-of-type(odd) {
-    background-color: #f2f5f7;
+    background-color: #f5f6f6;
+
 }
+
+table.table-striped tbody tr:nth-of-type(even) {
+    background-color: #e5ebef;
+}
+
 table.table-striped.table-hover tbody tr:hover {
-    background: #f5f5f5;
+    background: #f5f6f6;
 }
+
 table.table th i {
     font-size: 14px;
     margin: 0 5px;
     cursor: pointer;
 }
+
 table.table td:last-child i {
     opacity: 0.9;
     font-size: 22px;
     margin: 0 5px;
 }
+
 table.table td a {
     font-weight: bold;
     color: #566787;
@@ -90,36 +127,46 @@ table.table td a {
     text-decoration: none;
     outline: none !important;
 }
+
 table.table td a:hover {
     color: #13AA57;
 }
+
 table.table td a.edit {
     color: #FF9310;
 }
+
 table.table td a.delete {
     color: #E02116;
 }
+
 table.table td a.deactivate-user {
-    color: #E02116;
+    color: #000000;
 }
+
 table.table td a.activate-user {
-    color: #13AA57;
+    color: #000000;
 }
+
 .statistic-style {
     color: #13AA57;
 }
+
 table.table td i {
     font-size: 19px;
 }
+
 table.table .avatar {
     border-radius: 50%;
     vertical-align: middle;
     margin-right: 10px;
 }
+
 .pagination {
     float: right;
     margin: 0 0 5px;
 }
+
 .pagination li a {
     border: none;
     font-size: 14px;
@@ -132,53 +179,73 @@ table.table .avatar {
     text-align: center;
     padding: 0 6px;
 }
+
 .pagination li a:hover {
     color: #666;
 }
+
 .pagination li.active a, .pagination li.active a.page-link {
     background: #13AA57;
 }
+
 .pagination li.active a:hover {
     background: #245740;
 }
+
 .pagination li.disabled i {
     color: #ccc;
 }
+
 .pagination li i {
     font-size: 16px;
     padding-top: 6px
 }
+
 .hint-text {
     float: left;
     margin-top: 10px;
     font-size: 14px;
 }
+
 /* Custom checkbox */
-.custom-checkbox {
+.row-box-and-sort {
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #b4b4b4;
+    display: flex;
+    flex-grow: 1;
+}
+
+
+.custom-checkbox-select-all {
+    padding-top: 10px;
+    margin-left: 40px;
     position: relative;
 }
-.custom-checkbox input[type="checkbox"] {
+
+.custom-checkbox-select-all input[type="checkbox"] {
     opacity: 0;
     position: absolute;
     margin: 5px 0 0 3px;
     z-index: 9;
 }
-.custom-checkbox label:before{
-    width: 18px;
-    height: 18px;
-}
-.custom-checkbox label:before {
+
+.custom-checkbox-select-all label:before {
     content: '';
-    margin-right: 10px;
     display: inline-block;
     vertical-align: text-top;
-    background: white;
-    border: 1px solid #bbb;
+    background: #f0f0f0;
+    border: 1px solid #f0f0f0;
     border-radius: 2px;
     box-sizing: border-box;
     z-index: 2;
+    width: 18px;
+    height: 18px;
 }
-.custom-checkbox input[type="checkbox"]:checked + label:after {
+
+.custom-checkbox-select-all input[type="checkbox"]:checked + label:after {
+    margin-top: 10px;
     content: '';
     position: absolute;
     left: 6px;
@@ -191,12 +258,216 @@ table.table .avatar {
     z-index: 3;
     transform: rotateZ(45deg);
 }
+
+.custom-checkbox-select-all input[type="checkbox"]:checked + label:before {
+    border-color: #245740;
+    background: #245740;
+}
+
+.custom-checkbox-select-all input[type="checkbox"]:checked + label:after {
+    border-color: #fff;
+}
+
+.custom-checkbox-select-all input[type="checkbox"]:disabled + label:before {
+    color: #f0f0f0;
+    cursor: auto;
+    box-shadow: none;
+    background: #f0f0f0;
+}
+
+.custom-checkbox {
+    position: relative;
+}
+
+.custom-checkbox input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    margin: 5px 0 0 3px;
+    z-index: 9;
+}
+
+.custom-checkbox label:before {
+
+}
+
+.custom-checkbox label:before {
+    content: '';
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    background: white;
+    border-radius: 2px;
+    box-sizing: border-box;
+    z-index: 2;
+    width: 18px;
+    height: 18px;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+    content: '';
+    position: absolute;
+    left: 6px;
+    top: 3px;
+    width: 6px;
+    height: 11px;
+    border: solid #ffffff;
+    border-width: 0 3px 3px 0;
+    transform: inherit;
+    z-index: 3;
+    transform: rotateZ(45deg);
+}
+
 .custom-checkbox input[type="checkbox"]:checked + label:before {
     border-color: #245740;
     background: #245740;
 }
-.custom-checkbox input[type="checkbox"]:checked + label:after {
-    border-color: #fff;
+.dropbtn.role {
+    width: 120px;
+    height: 25px;
+    background-color: #ffffff;
+    text-align: center;
+    border-radius: 5px;
+    border: solid 1px #ffffff;
+}
+
+.dropdown-content.role {
+    display: none;
+    width: 120px;
+    height: 60px;
+    border-radius: 5px;
+    position: absolute;
+}
+
+.dropdown:hover .dropdown-content.role {
+    display: block;
+    background-color: #ffffff;
+    z-index: 10000;
+
+}
+
+.dropdown-content.role a {
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+    display: block;
+    font-weight: normal;
+
+}
+
+.dropdown.role {
+    position: relative;
+    display: inline-block;
+    padding-right: 20px;
+    margin-left: 0 !important;
+}
+
+.dropdown-content.role a:hover {
+    color: #ffffff;
+    background-color: #13aa57;
+}
+.dropbtn.status {
+    width: 130px;
+    height: 25px;
+    background-color: #ffffff;
+    text-align: center;
+    border-radius: 5px;
+    border: solid 1px #ffffff;
+}
+
+.dropdown-content.status {
+    display: none;
+    width: 130px;
+    height: 70px;
+    border-radius: 5px;
+    position: absolute;
+}
+
+.dropdown:hover .dropdown-content.status {
+    display: block;
+    background-color: #ffffff;
+    z-index: 10000;
+
+}
+
+.dropdown-content.status a {
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+    display: block;
+    font-weight: normal;
+
+}
+
+.dropdown.status {
+    position: relative;
+    display: inline-block;
+    padding-right: 20px;
+    margin-left: 0 !important;
+}
+
+.dropdown-content.status a:hover {
+    color: #ffffff;
+    background-color: #13aa57;
+}
+
+.dropbtn.size {
+    width: 60px;
+    height: 20px;
+    background-color: #c1c9c9;
+    text-align: center;
+    border-radius: 5px;
+    border: solid 1px #c1c9c9;
+}
+
+.dropdown-content.size {
+    display: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+    position: absolute;
+}
+
+.dropdown:hover .dropdown-content.size {
+    display: block;
+    background-color: #ffffff;
+
+}
+
+.dropdown-content.size a {
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+    display: block;
+    font-weight: normal;
+    height: 20px;
+    text-align: center;
+}
+
+.dropdown.size {
+    position: relative;
+    display: inline-block;
+    margin-left: 0 !important;
+}
+
+.dropdown-content.size a:hover {
+    color: #ffffff;
+    background-color: #13aa57;
+    height: 20px;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
+.filter-list-grid {
+    position: absolute;
+    right: 50px;
+    display: flex;
+    padding-top: 5px;
+
+}
+
+.filter-list-grid i {
+    margin-left: 20px;
+    font-size: 16px;
 }
 .custom-checkbox input[type="checkbox"]:disabled + label:before {
     color: #b8b8b8;
@@ -204,52 +475,78 @@ table.table .avatar {
     box-shadow: none;
     background: #ddd;
 }
-/* Modal styles */
+
 .modal .modal-dialog {
     max-width: 600px;
 }
+
+.modal-title {
+    text-align: center;
+    margin-top: 20px;
+
+}
+.modal-title-deac{
+    text-align: center;
+    margin: auto;
+    color: #d12a24;
+}
+
 .modal .modal-header, .modal .modal-body, .modal .modal-footer {
     padding: 20px 30px;
 }
+
 .modal .modal-content {
     border-radius: 3px;
     font-size: 14px;
 }
+
 .modal .modal-footer {
     border-radius: 0 0 3px 3px;
 }
+
 .modal .modal-title {
     display: inline-block;
 }
+
 .modal .form-control {
     border-radius: 3px;
     box-shadow: none;
     border: 1px solid #878787;
 }
+
 .modal textarea.form-control {
     resize: vertical;
 }
+
 .modal .btn {
     border-radius: 2px;
     min-width: 100px;
 }
+
 .modal form label {
     font-weight: normal;
 }
-.errorSpan{
+
+.errorSpan {
     color: red;
     font-style: italic;
 }
-.form-inline.searching{
+.main-search {
+    flex-grow: 1;
+}
+
+.form-inline.searching {
     margin-bottom: 0;
     margin-top: 5px;
     vertical-align: middle;
 }
+
 .search-box {
     position: relative;
     float: left;
     margin-top: 10px;
 }
+
 .search-box input {
     height: 34px;
     border-radius: 20px;
@@ -257,9 +554,13 @@ table.table .avatar {
     border-color: #ddd;
     box-shadow: none;
 }
-.search-box input:focus {
-    border-color: #245740;
+
+.search-box-right {
+    position: relative;
+    float: right;
+    margin-left: 10px;
 }
+
 .search-box i {
     color: #a0a5b1;
     position: absolute;
@@ -268,22 +569,23 @@ table.table .avatar {
     left: 10px;
 }
 
-.search-box-right {
-    position: relative;
-    float: right;
-    margin-left: 10px;
+.search-box input:focus {
+    border-color: #245740;
 }
+
 .search-box-right input {
     height: 34px;
-    border:none;
+    border: none;
     border-radius: 0;
     padding-left: 8px;
     border-bottom: #E6E6E6 1px solid;
 }
+
 .search-box-right input:focus {
     border-color: #245740;
     outline: none;
 }
+
 .search-box-right i {
     color: #a0a5b1;
     position: absolute;
@@ -291,28 +593,29 @@ table.table .avatar {
     top: 8px;
     left: 10px;
 }
+
 input[type=search] {
-    border: none;
-    border-bottom: 1px solid #b5b7b8;
-    border-radius: 0px;
-    /*background-image: url('/img/search.png');*/
-    background-repeat: no-repeat;
-    background-color: #f2f5f7;
-    width : 110px;
+    border: 1px dotted #999;
+    border-radius: 0;
+    width: 110px;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-appearance: none;
 }
 
-.search-box-right img{
+.search-box-right img {
     width: 16px;
-    cursor: pointer ;
+    cursor: pointer;
 }
 
-.btn{
+.btn {
     width: 122px;
     height: 48px;
     border-radius: 5px;
     font-weight: 600;
 }
-.btn div{
+
+.btn div {
     text-align: center;
     position: relative;
     top: 50%;
@@ -320,124 +623,155 @@ input[type=search] {
     line-height: 16px;
 }
 
-.btn-primary{
+.btn-primary {
     background-color: #13AA57;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
     background-color: #245740;
 }
-.btn-primary:focus{
+
+.btn-primary:focus {
     background-color: #245740;
     outline: none;
 }
 
-.btn.btn-secondary{
-    border: 1px solid #13AA57;
-    background-color: #ffffff;
-    color: #13AA57;
+.btn.btn-secondary {
+    border: solid #13AA57;
+    background-color: #13AA57;
+    color: #ffffff;
+    border-radius: 5px;
+    width: 130px;
+    height: 40px;
 }
-.btn-secondary:hover{
+
+.btn-secondary:hover {
     border: 1px solid #10804E;
     background-color: #ffffff;
     color: #245740;
 }
-.btn-secondary:focus{
+
+.btn-secondary:focus {
     border: 1px solid #10804E;
     background-color: #ffffff !important;
     color: #245740 !important;
     outline: none;
 }
 
-.btn-tertiary{
+.btn-tertiary {
     color: #056B33;
 }
-.btn-tertiary:hover{
+
+.btn-tertiary:hover {
     color: #13AA57;
 }
-.btn-tertiary:focus{
+
+.btn-tertiary:focus {
     color: #13AA57;
 }
 
 .btn-remove {
-    color: #fff;
+    border-radius: 5px !important;
+    color: #ffffff;
     background-color: #E02116;
+    width: 130px;
+    height: 40px;
+
 }
-.btn-remove:hover{
+
+.btn-remove:hover {
     color: #fff;
     background-color: #B21D15;
+
 }
-.btn-remove:focus{
+
+.btn-remove:focus {
     color: #fff;
     background-color: #B21D15;
     outline: none;
 }
-.btn-remove.disabled   {
-    background-color: #839C94;
-}
 
-a#deactivateAllSubmit.btn.btn-danger{
+.btn-remove.disabled {
+    border: 1px solid #E02116;
+    background-color: #fff;
+    border-radius: 5px;
+    color: #E02116;
+    width: 130px;
+    height: 40px;
+}
+a#deactivateAllSubmit.btn.btn-danger {
     height: 59px;
 }
-a#deactivateOneSubmit.btn.btn-danger{
+
+a#deactivateOneSubmit.btn.btn-danger {
     vertical-align: middle;
 }
 
-.table-primary>th{
+.table-primary > th {
     background-color: #F5F6F6;
 }
 
-.graph{
+.graph {
     margin-bottom: 0;
     margin-left: 5px;
     display: block;
     vertical-align: middle;
 }
-.arrow.fas.fa-chevron-right{
+
+.arrow.fas.fa-chevron-right {
     text-align: center;
     padding-top: 9px;
     font-size: 12px;
 }
-.arrow.fas.fa-chevron-left{
+
+.arrow.fas.fa-chevron-left {
     font-size: 12px;
     padding-top: 9px;
     text-align: center;
 }
-.page-item{
+
+.page-item {
     margin-left: 5px;
     margin-right: 5px;
 }
-.text-warning{
+
+.text-warning {
     color: #FF9310 !important;
 }
 
-.table-hover thead tr:hover th{
+.table-hover thead tr:hover th {
     background-color: #13AA57 !important;
     color: #fff;
 }
-button#searchBy{
+
+button#searchBy {
     border: none;
     background-color: transparent;
 }
-button#searchBy img{
-    width: 22px;
+
+button#searchByForUser {
+    border: none;
+    background-color: transparent;
 }
 
 .col.text {
     width: 280px;
     word-wrap: break-word;
 }
+
 .col.title {
     width: 140px;
     word-wrap: break-word;
 }
+
 .col.source {
     width: 140px;
     word-wrap: break-word;
 }
+
 .col.action {
     width: 90px;
 }
-
 /* sidepanel*/
 .eco-news-active-link{
     background-color: #a2b5af;
