habit goals admin panel

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -139,6 +139,9 @@ table.table td a.edit {
 table.table td a.delete {
     color: #E02116;
 }
+table.table td a.add {
+    color: #008000;
+}
 
 table.table td a.deactivate-user {
     color: #000000;
