--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -119,6 +119,7 @@
                                 <a th:href="@{/management/habits/delete/(id=${habit.id})}"
                                    class="delete eDelBtn" data-toggle="modal"><i class="material-icons"
                                                                                  data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a th:href="@{/management/habit-shoping-list/?habitId={id}(id=${habit.id})}" > Goals </a>
                             </td>
                         </tr>
                         </tbody>
